grammar.js
        source_file: $ => repeat($.top_level_statement),
        
        // intrinsic: $ => seq(token.immediate('#'), choice($.identifier, $.access, $.call)),

        top_level_block: $ => seq(
            '{',
            repeat(choice($.top_level_control_statement, $.statement)),
            '}'
        ),

        top_level_if_statement: $ => prec.right(seq(
            '#if',
            optional(seq(
                field('initializer', comma_separated_list1($.parameter)), 
                ';'
            )),
            field('condition', $.expression),
            field('consequence', $.top_level_block),
            optional(seq(
                'else',
                field('alternative', choice($.top_level_if_statement, $.top_level_block))
            ))
        )),

        sc_dot_path: $ => token(/\.?([A-z0-9_]+\.)*([A-z0-9_]+\.sc)/),
        dot_path: $ => token(/\.?([A-z0-9_]+\.)*([A-z0-9_]+)/),

        load_statement: $ => seq(
            '#load',
            field('path', $.sc_dot_path),
            ';'
        ),
        
        import_statement: $ => seq(
            '#import',  
            field('path', $.dot_path), 
            optional(seq(
                'as', 
                field('alias', $.identifier)
            )),
            ';'
        ),

        /// DEFINITIONS ///

        variable_definition: $ => seq(
            optional( field('attr', $.attribute_attachment) ),
            field('name', $.identifier),
            optional(seq(
                ':',
                field('type', $.type_like)
            )),
            ':=', 
            field('value', $.expression),
            ';'
        ),
        
        // v: u32;
        variable_declaration: $ => seq(
            optional( field('attr', $.attribute_attachment) ),
            field('name', $.identifier),
            ':',
            field('type', $.type_like),
            ';'
        ),

        // c :: 42;
        constant_definition: $ => prec(precedences['const'], seq(
            optional( field('attr', $.attribute_attachment) ),
            field('name', $.identifier),
            optional(seq(
                ':',
                field('type', $.type_like),
            )),
            //choice(
                '::',
                //seq(':', field('type', $.expression), ':'),
            //),
            field('value', $.expression),
            ';'
        )),

        // p: t = v
        parameter: $ => seq(
            optional( field('attr', $.attribute_attachment) ),
            field('name', $.identifier),
            choice(
                seq(
                    ':',
                    field('type', $.type_like),
                    optional(seq(
                        choice(':=', '::'),
                        field('default_value', $.expression)
                    ))
                ),
                seq(
                    ':=',
                    field('default_value', $.expression)
                ),
                seq(
                    '::',
                    field('default_value', $.expression)
                )
            )
        ),

        // fn :: () -> T {}
        // fn :: () => {}
        function_definition: $ => seq(
            optional( field('attr', $.attribute_attachment) ),
            field('name', $.identifier),
            '::',
            '(',
            comma_separated_list($.parameter),
            ')',
            choice(
                seq(
                    '->', 
                    field('return_type', $.type_like)
                ),
                '=>'
            ),
            field('body', $.block)
        ),

        block: $ => prec.right(seq(
            '{', repeat($.statement), '}'
        )),
        
        empty_statement: _ => ';',
        break_statement: _ => seq('break', ';'),
        continue_statement: _ => seq('continue', ';'),
        return_statement: $ => seq('return', $.expression, ';'),

        assignment: $ => seq(
            field('reference', choice($.identifier, $.reference_operator)),
            '=',
            field('value', $.expression),
            ';'
        ),

        if_statement: $ => prec.right(seq(
            'if',
            optional(seq(
                comma_separated_list1($.parameter),
                ';'
            )),
            field('condition', $.expression),
            field('consequence', $.block),
            optional(seq(
                'else',
                field('alternative', choice($.if_statement, $.block))
            ))
        )),

        while_statement: $ => seq(
            'while',
            optional(seq(
                comma_separated_list1($.parameter),
                ';'
            )),
            field('condition', $.expression),
            field('body', $.block),
            optional(seq(
                'else',
                field('alternative', $.block)
            ))
        ),

        for_statement: $ => seq(
            'for',
            optional(seq(
                comma_separated_list($.parameter),
                ';'
            )),
            field('condition', $.expression),
            optional(seq(
                ';',
                field('deferred_action', $.expression)
            )),
            field('body', $.block),
            optional(seq(
                'else',
                field('alternative', $.block)
            ))
        ),

        iterator: $ => seq(
            field('name', $.identifier),
            optional(seq(
                ':',
                field('type', $.type_like)
            ))
        ),

        foreach_statement: $ => seq(
            'foreach',
            field('iterator', comma_separated_list1($.iterator)),
            'in',
            field('range', $.expression),
            field('body', $.block)
        ),

        defer_statement: $ => seq(
            'defer',
            comma_separated_list1($.expression),
            ';'
        ),

        assert_statement: $ => seq(
            'assert',
            $.expression_statement
        ),

        expects_statement: $ => seq(
            'expects',
            $.expression_statement
        ),

        ensures_statement: $ => seq(
            'ensures',
            $.expression_statement
        ),

        /// EXPRESSIONS ///
        
        reference_operator: $ => seq(
            '&(',
            comma_separated_list1($.identifier),
            ')'
        ),

        argument: $ => seq(
            optional(seq(
                field('name', $.identifier),
                ':'
            )),
            field('value', $.expression)
        ),

        call: $ => prec(precedences['call'], seq(
            field('callable', choice(
                $.identifier,
                $.access,
            )),
            '(',
            comma_separated_list($.argument),
            ')'
        )),

        access: $ => prec.right(precedences['access'],
            seq(
                field('lhs', $.expression),
                '.',
                field('rhs', $.expression)
            ),
        ),

        mathexpr: $ => prec(precedences['mathexpr'], seq(
            'calc',
            optional(seq(
                '->',
                field('return_type', $.type_like)
            )),
            '{',
            token.immediate(/[A-z0-9_;,\\'"\.\+\-*\/%()^|&=!<> \n]+/),
            '}',
        )),

        list: $ => prec.right(seq(
            '$(', 
            comma_separated_list1($.expression), 
            ')'
        )),

        signed_int_t: $ => token(choice(
            'i8',
            'i16',
            'i32',
            'i64',
            'i128'
        )),

        unsigned_int_t: $ => token(choice(
            'u8',
            'u16',
            'u32',
            'u64',
            'u128'
        )),

        float_t: _ => token(choice(
            'f32',
            'f64',
            'f128'
        )),

        string_t: _ => token('string'),

        none_t: _ => token('none'),
        bool_t: _ => token('bool'),
        array_t: $ => prec.right(precedences['array_t'], seq(
            '$[',
                field('type', $.type_like),
                optional(seq(
                    ',',
                    field('size', $.integer_literal)
                )),
            ']'
        )),

        map_t: $ => prec.right(precedences['map_t'], seq(
            '$[',
                field('key', $.type_like),
                ':',
                field('value', $.type_like),
            ']'
        )),

        prototype_parameter: $ => seq(
            optional(seq(
                field('name', $.identifier),
                ':'
            )),
            field('type', $.type_like)
        ), 
        
        // function (i32, string) -> f32
        prototype: $ => seq(
            choice(seq('function', '('), 'φ('), 
            comma_separated_list($.prototype_parameter),
            ')',
            optional(seq(
                '->',
                field('return_type', $.type_like),
            ))
        ),

        // lambda (s: string) => {}
        lambda: $ => seq(
            optional( field('attr', $.attribute_attachment) ),
            choice(seq('lambda', '('), 'λ('),
            comma_separated_list($.parameter),
            ')',
            choice(
                seq(
                    '->',
                    field('return_type', $.type_like)
                ),
                '=>',
            ),
            field('body', $.block)
        ),

        /// LITERALS ///

        boolean_literal: $ => choice(
            $.true,
            $.false
        ),

        true: _ => token('true'),
        false: _ => token('false'),

        integer_literal: $ => token(seq(
            choice(
                decimal_digits_pattern,
                (/0[xX][0-9a-fA-F_]*[0-9a-fA-F]+/), // Hex
            ),
            optional(/u8|u16|u32|u64|u128|i8|i16|i32|i64|i128/)
        )),

        float_literal: $ => {
            const suffix = /[fFdDmM]/;
            const exponent = /[eE][+-]?[0-9][0-9_]*/;
            return token(seq(
                choice(
                    seq(
                        decimal_digits_pattern,
                        '.',
                        decimal_digits_pattern,
                        optional(exponent),
                        optional(suffix)
                    ),
                    seq(
                        '.',
                        decimal_digits_pattern,
                        optional(exponent),
                        optional(suffix)
                    ),
                    seq(
                        decimal_digits_pattern,
                        exponent,
                        optional(suffix)
                    ),
                    seq(
                        decimal_digits_pattern,
                        suffix
                    )
                ),
                optional(/f32|f64|f128/)
            ))
        },

        rune_literal: $ => seq(
            '\'',
            choice(
                token.immediate(/[^'\\]/), 
                $.escape_sequence
            ),
            '\'',
        ),

        string_literal: $ => seq(
            '"',
            repeat(choice(
                $.string_literal_fragment,
                $.escape_sequence
            )),
            '"'
        ),
    
        string_literal_fragment: $ => token.immediate(prec(1, /[^"\\\n]+/)),
        
        escape_sequence: $ => token(choice(
            /\\x[0-9a-fA-F][0-9a-fA-F]?[0-9a-fA-F]?[0-9a-fA-F]?/,
            /\\u[0-9a-fA-F][0-9a-fA-F][0-9a-fA-F][0-9a-fA-F]/,
            /\\U[0-9a-fA-F][0-9a-fA-F][0-9a-fA-F][0-9a-fA-F][0-9a-fA-F][0-9a-fA-F][0-9a-fA-F][0-9a-fA-F]/,
            /\\[^xuU]/,
        )),
        
        
        code_literal_fragment: $ => token.immediate(prec(1, /[^`\\\n]+/)),
        
        code_literal: $ => seq(
            '`',
            /[A-z_]+/,
            repeat1(choice(
                $.code_literal_fragment,
                $.escape_sequence
            )),
            '`'
        ),
        
        raw_code_literal: $ => token(seq(
            /``[`]+/,
            /[A-z_]+/,
            /([^`]|(`[^`])|(``[^`]))+/,
            /``[`]+/
        )),

        comment: $ => token(choice(
            seq('//', /[^\n\r]*/)
        )),

        _name: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
        //keyword: $ => choice(),
        identifier: $ => $._name, //choice($._name, $.keyword),
    }
})

function comma_separated_list(rule) {
    return optional(comma_separated_list1(rule))
}

function comma_separated_list1(rule) {
    return seq(
        rule,
        repeat(seq(
            ',',
            rule
        ))
    )
}
